[package]
name = "mdbook-sitemap"
version = "0.1.1"
edition = "2021"
description = "A sitemap.xml generator backend for mdBook"
license = "MIT"
repository = "https://github.com/sonneko/mdbook-sitemap"
readme = "README.md"
keywords = ["mdbook", "sitemap", "seo", "documentation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mdbook-sitemap"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
